--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         Here is a summary of my most important skills and abilities:
       </h2>
       <ul class="ability-list">
-        <li class="ability-title">Coding</li>
+<!--         <li class="ability-title">Coding</li>
         <li class="ability">
           <span>Html</span>
           <i class="fa-solid fa-star"></i>
@@ -113,7 +113,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-regular fa-star"></i>
         </li>
-      </ul>
+      </ul> -->
     </div>
 
     <div class="socialBar">
@@ -157,6 +157,7 @@
         <button type="submit">Send Email</button>
       </form>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="js.js"></script>
   </body>
 </html>
