Added download link to image

--- a/hobbies.html
+++ b/hobbies.html
@@ -26,10 +26,15 @@
           <i class="fa-solid fa-circle-info"></i>
           <span class="icon-text">Jo Nakashima</span>
         </div>
-        <div class="icon-box">
+        <!-- <div class="icon-box"> -->
+        <a
+          class="icon-box"
+          href="Origami/20230430_091602.jpg"
+          download="Origami-image">
           <i class="fa-solid fa-circle-arrow-down"></i>
           <span class="icon-text">Download</span>
-        </div>
+        </a>
+        <!-- </div> -->
       </div>
     </div>
     <script src="hobbies.js"></script>
