added modal to hobbies page

--- a/hobbies.html
+++ b/hobbies.html
@@ -37,6 +37,10 @@
         <!-- </div> -->
       </div>
     </div>
+    <div id="imageModal" class="modal">
+      <i id="close" class="fa-solid fa-xmark"></i>
+      <img class="modal-content" id="img01" />
+    </div>
     <script src="hobbies.js"></script>
   </body>
 </html>
