--- a/hobbies.html
+++ b/hobbies.html
@@ -22,10 +22,10 @@
         <i class="fa-solid fa-arrow-left-long"></i>
       </div>
       <div class="bottom-overlay">
-        <div class="icon-box">
+        <a class="icon-box" href="https://jonakashima.com.br/">
           <i class="fa-solid fa-circle-info"></i>
           <span class="icon-text">Jo Nakashima</span>
-        </div>
+        </a>
         <!-- <div class="icon-box"> -->
         <a
           class="icon-box"
