added some stuff to hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -14,29 +14,146 @@
     <link rel="icon" href="Logo.svg" type="imag/svg+xml" />
   </head>
   <body>
-    <div class="image-container">
-      <img class="origami-image" src="Origami/20230430_091602.jpg" />
-      <div class="top-overlay">
-        <span class="image-number">1/2</span>
-        <i class="fa-solid fa-arrow-right-long"></i>
-        <i class="fa-solid fa-arrow-left-long"></i>
-      </div>
-      <div class="bottom-overlay">
-        <a class="icon-box" href="https://jonakashima.com.br/">
-          <i class="fa-solid fa-circle-info"></i>
-          <span class="icon-text">Jo Nakashima</span>
-        </a>
-        <!-- <div class="icon-box"> -->
-        <a
-          class="icon-box"
-          href="Origami/20230430_091602.jpg"
-          download="Origami-image">
-          <i class="fa-solid fa-circle-arrow-down"></i>
-          <span class="icon-text">Download</span>
-        </a>
-        <!-- </div> -->
+    <div class="mainImage-container">
+      <img class="main-image" src="origami/OrigamiMainTest.jpg" />
+    </div>
+    <div class="origami-gallery-container">
+      <div class="origami-gallery">
+        <div class="column">
+          <div class="image-container">
+            <img class="origami-image" src="Origami/20230430_091602.jpg" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="image-container">
+            <img class="origami-image" src="origami/square image.png" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="image-container">
+            <img class="origami-image" src="origami/20230430_091917.jpg" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="image-container">
+            <img class="origami-image" src="origami/20230504_210726.jpg" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+          <div class="image-container">
+            <img class="origami-image" src="origami/short image.png" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+          <div class="image-container">
+            <img class="origami-image" src="origami/20231003_002634.jpg" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <div id="imageModal" class="modal">
       <i id="close" class="fa-solid fa-xmark"></i>
       <img class="modal-content" id="img01" />
