just more edits

--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,47 @@
     <link rel="icon" href="Logo.svg" type="imag/svg+xml" />
   </head>
   <body>
+    <div class="navicon-container">
+      <i class="navbar-icon fa-solid fa-bars"></i>
+    </div>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li>
+          <a href="index.html" class="navbar-link">
+            <i class="fas fa-home"></i>
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="movies.html" class="navbar-link">
+            <i class="fas fa-film"></i>
+            Movies
+          </a>
+        </li>
+        <li>
+          <a href="books.html" class="navbar-link">
+            <i class="fas fa-book"></i>
+            Books
+          </a>
+        </li>
+        <li>
+          <a href="hobbies.html" class="navbar-link">
+            <i class="fas fa-person-skiing"></i>
+            Hobbies
+          </a>
+        </li>
+        <li>
+          <a href="projects.html" class="navbar-link">
+            <i class="fas fa-diagram-project"></i>
+            Projects
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div class="mainImage-container">
+      <div class="tag">
+        <a href="#" onclick="scrollToTop(event)">Farzatci</a>
+      </div>
       <img class="main-image" src="origami/OrigamiMainTest.jpg" />
     </div>
     <div class="origami-gallery-container">
