Added automatic picture building functionality

--- a/hobbies.html
+++ b/hobbies.html
@@ -59,8 +59,8 @@
     </div>
     <div class="origami-gallery-container">
       <div class="origami-gallery">
-        <div class="column">
-          <div class="image-container">
+        <div class="column" id="column01">
+          <!-- <div class="image-container">
             <img class="origami-image" src="Origami/20230430_091602.jpg" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -124,10 +124,10 @@
                 <span class="icon-text">Download</span>
               </a>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div class="column">
-          <div class="image-container">
+        <div class="column" id="column02">
+<!--           <div class="image-container">
             <img class="origami-image" src="origami/20230504_210726.jpg" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -147,8 +147,8 @@
                 <span class="icon-text">Download</span>
               </a>
             </div>
-          </div>
-          <div class="image-container">
+          </div> -->
+          <!-- <div class="image-container">
             <img class="origami-image" src="origami/short image.png" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -188,16 +188,20 @@
                 <i class="fa-solid fa-circle-arrow-down"></i>
                 <span class="icon-text">Download</span>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </div>
-
+    
+    <div class="mainPlant-container">
+      <img class="main-image" src="plants/plantMainTemporary.png" />
+    </div>
     <div id="imageModal" class="modal">
       <i id="close" class="fa-solid fa-xmark"></i>
       <img class="modal-content" id="img01" />
     </div>
     <script src="hobbies.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   </body>
 </html>
