--- a/hobbies.html
+++ b/hobbies.html
@@ -192,6 +192,11 @@
           </div>
         </div>
       </div>
+      <div class="show-more-container">
+        <button id="toggleButton">
+          <i class="fa fa-chevron-down"></i> Show More
+        </button>
+      </div>
     </div>
     
     <div class="mainPlant-container">
