Worked on books and movies page and created reusable files

--- a/hobbies.html
+++ b/hobbies.html
@@ -57,10 +57,11 @@
       </div>
       <img class="main-image" src="origami/OrigamiMainTest.jpg" />
     </div>
-    <div class="origami-gallery-container">
-      <div class="origami-gallery">
-        <div class="column" id="column01">
-          <!-- <div class="image-container">
+    <div class="pin-wrapper">
+      <div class="origami-gallery-container">
+        <div class="origami-gallery">
+          <div class="column" id="column01">
+            <!-- <div class="image-container">
             <img class="origami-image" src="Origami/20230430_091602.jpg" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -125,9 +126,9 @@
               </a>
             </div>
           </div> -->
-        </div>
-        <div class="column" id="column02">
-<!--           <div class="image-container">
+          </div>
+          <div class="column" id="column02">
+            <!--           <div class="image-container">
             <img class="origami-image" src="origami/20230504_210726.jpg" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -148,7 +149,7 @@
               </a>
             </div>
           </div> -->
-          <!-- <div class="image-container">
+            <!-- <div class="image-container">
             <img class="origami-image" src="origami/short image.png" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -194,18 +195,21 @@
       </div>
       <div class="show-more-container">
         <button id="toggleButton">
-          <i class="fa fa-chevron-down"></i> Show More
+          <i class="fa fa-chevron-down"></i>
+          Show More
         </button>
       </div>
     </div>
-    
     <div class="mainPlant-container">
       <img class="main-image" src="plants/plantMainTemporary.png" />
     </div>
+    <div class="random"></div>
     <div id="imageModal" class="modal">
       <i id="close" class="fa-solid fa-xmark"></i>
       <img class="modal-content" id="img01" />
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="hobbies.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   </body>
