Finished functionality for books page

--- a/books.html
+++ b/books.html
@@ -60,10 +60,10 @@
       <h3 class="quote-author">Some wise man</h3>
     </div>
     <div class="book-gallery">
-      <span class="category-title">Favourites</span>
-      <hr />
+      <!-- <span class="category-title">Favourites</span>
+      <hr /> -->
       <div class="books">
-        <div class="book-wrapper" id="b1984">
+        <!-- <div class="book-wrapper" id="b1984">
           <div class="book"><img src="book image.png" /></div>
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -72,7 +72,7 @@
           <i class="fa-solid fa-star"></i>
         </div>
         <div class="book-wrapper">
-          <div class="book" id="book1"><img src="book image 9.jpg" /></div>
+          <div class="book" id="book2"><img src="book image 9.jpg" /></div>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="book-wrapper">
-          <div class="book" id="book1"></div>
+          <div class="book" id="book3"></div>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="book-wrapper">
-          <div class="book" id="book1"></div>
+          <div class="book" id="book5"></div>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -102,18 +102,17 @@
           </div>
         </div>
         <div class="book-wrapper">
-          <div class="book" id="book1"></div>
+          <div class="book" id="book8"></div>
           <div class="stars">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
-    <div class="random"></div>
 
     <div class="modal">
       <div class="modal-content">
@@ -123,39 +122,21 @@
             <img id="modal-img" src="Origami/20230430_091602.jpg" />
           </div>
           <div class="general-info">
-            <div class="rating">Google Rating: 91%</div>
+            <div class="gRating">Google Rating: 91%</div>
             <div class="genre">Genre: Dark, Serious</div>
           </div>
         </div>
         <div class="right-wrapper">
           <div class="book-info">
-            <h1 class="Title">1984</h1>
-            <h2 class="author">George my homie</h2>
-            <div class="release-date">Idk let's say 1983</div>
+            <h1 class="title"></h1>
+            <h2 class="author"></h2>
+            <div class="release-date"></div>
             <div class="rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
             </div>
           </div>
           <div class="review">
             <h3 class="review-header">Review</h3>
-            <p class="review-text">
-              My very interesting review. Lorem, ipsum dolor sit amet
-              consectetur adipisicing elit. Temporibus nesciunt culpa nulla.
-              Recusandae totam dicta, odio velit dolores modi labore suscipit
-              voluptas, voluptate ex saepe architecto ullam laudantium,
-              necessitatibus voluptatibus. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Est repellat, eveniet ex, sint
-              nemo, eaque alias provident dicta debitis similique nesciunt unde
-              amet tempora? Quia quam reiciendis debitis ipsa obcaecati. Lorem
-              ipsum dolor sit amet consectetur, adipisicing elit. Odit,
-              praesentium! Distinctio eos unde itaque nobis asperiores totam qui
-              optio, voluptate illo suscipit tenetur fugit excepturi blanditiis
-              reiciendis ipsum exercitationem laborum.
-            </p>
+            <p class="review-text"></p>
           </div>
         </div>
       </div>
