Fixed plant image z-index and hopefully fixed the main image not loading

--- a/hobbies.html
+++ b/hobbies.html
@@ -55,7 +55,7 @@
       <a href="#" onclick="scrollToTop(event)">Farzatci</a>
     </div>
     <div class="mainImage-container">
-      <img class="main-image" src="origami/OrigamiMainTest.jpg" />
+      <img class="main-image" src="Origami/OrigamiMainTest.jpg" />
     </div>
     <div class="pin-wrapper">
       <div class="origami-gallery-container">
@@ -201,7 +201,7 @@
       </div>
     </div>
     <div class="mainPlant-container">
-      <img class="main-image" src="plants/plantMainTemporary.png" />
+      <img class="main-image" src="Plants/plantMainTemporary.png" />
     </div>
     <div class="random"></div>
     <div id="imageModal" class="modal">
