--- a/hobbies.html
+++ b/hobbies.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
     <link rel="icon" href="Logo.svg" type="imag/svg+xml" />
+    <link rel="stylesheet" href="reusable.css" />
   </head>
   <body>
     <div class="navicon-container">
@@ -54,14 +55,13 @@
     <div class="tag">
       <a href="#" onclick="scrollToTop(event)">Farzatci</a>
     </div>
-    <div class="mainImage-container">
-      <img class="main-image" src="Origami/OrigamiMainTest.jpg" />
-    </div>
-    <div class="pin-wrapper">
-      <div class="origami-gallery-container">
-        <div class="origami-gallery">
-          <div class="column" id="column01">
-            <!-- <div class="image-container">
+    <div class="hobby-section origami-section">
+      <div class="mainImage-container">
+        <img class="main-image" src="Origami/OrigamiMainTest.jpg" />
+      </div>
+      <div class="origami-gallery">
+        <div class="column" id="column01">
+          <!-- <div class="image-container">
             <img class="origami-image" src="Origami/20230430_091602.jpg" />
             <div class="top-overlay">
               <span class="image-number">1/2</span>
@@ -81,117 +81,9 @@
                 <span class="icon-text">Download</span>
               </a>
             </div>
-          </div>
-
-          <div class="image-container">
-            <img class="origami-image" src="origami/square image.png" />
-            <div class="top-overlay">
-              <span class="image-number">1/2</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-              <i class="fa-solid fa-arrow-left-long"></i>
-            </div>
-            <div class="bottom-overlay">
-              <a class="icon-box" href="https://jonakashima.com.br/">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="icon-text">Jo Nakashima</span>
-              </a>
-              <a
-                class="icon-box"
-                href="Origami/20230430_091602.jpg"
-                download="Origami-image">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                <span class="icon-text">Download</span>
-              </a>
-            </div>
-          </div>
-
-          <div class="image-container">
-            <img class="origami-image" src="origami/20230430_091917.jpg" />
-            <div class="top-overlay">
-              <span class="image-number">1/2</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-              <i class="fa-solid fa-arrow-left-long"></i>
-            </div>
-            <div class="bottom-overlay">
-              <a class="icon-box" href="https://jonakashima.com.br/">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="icon-text">Jo Nakashima</span>
-              </a>
-              <a
-                class="icon-box"
-                href="Origami/20230430_091602.jpg"
-                download="Origami-image">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                <span class="icon-text">Download</span>
-              </a>
-            </div>
           </div> -->
-          </div>
-          <div class="column" id="column02">
-            <!--           <div class="image-container">
-            <img class="origami-image" src="origami/20230504_210726.jpg" />
-            <div class="top-overlay">
-              <span class="image-number">1/2</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-              <i class="fa-solid fa-arrow-left-long"></i>
-            </div>
-            <div class="bottom-overlay">
-              <a class="icon-box" href="https://jonakashima.com.br/">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="icon-text">Jo Nakashima</span>
-              </a>
-              <a
-                class="icon-box"
-                href="Origami/20230430_091602.jpg"
-                download="Origami-image">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                <span class="icon-text">Download</span>
-              </a>
-            </div>
-          </div> -->
-            <!-- <div class="image-container">
-            <img class="origami-image" src="origami/short image.png" />
-            <div class="top-overlay">
-              <span class="image-number">1/2</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-              <i class="fa-solid fa-arrow-left-long"></i>
-            </div>
-            <div class="bottom-overlay">
-              <a class="icon-box" href="https://jonakashima.com.br/">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="icon-text">Jo Nakashima</span>
-              </a>
-              <a
-                class="icon-box"
-                href="Origami/20230430_091602.jpg"
-                download="Origami-image">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                <span class="icon-text">Download</span>
-              </a>
-            </div>
-          </div>
-          <div class="image-container">
-            <img class="origami-image" src="origami/20231003_002634.jpg" />
-            <div class="top-overlay">
-              <span class="image-number">1/2</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-              <i class="fa-solid fa-arrow-left-long"></i>
-            </div>
-            <div class="bottom-overlay">
-              <a class="icon-box" href="https://jonakashima.com.br/">
-                <i class="fa-solid fa-circle-info"></i>
-                <span class="icon-text">Jo Nakashima</span>
-              </a>
-              <a
-                class="icon-box"
-                href="Origami/20230430_091602.jpg"
-                download="Origami-image">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                <span class="icon-text">Download</span>
-              </a>
-            </div> -->
-          </div>
         </div>
+        <div class="column" id="column02"></div>
       </div>
       <div class="show-more-container">
         <button id="toggleButton">
@@ -200,17 +92,20 @@
         </button>
       </div>
     </div>
-    <div class="mainPlant-container">
-      <img class="main-image" src="Plants/plantMainTemporary.png" />
-    </div>
-    <div class="random"></div>
-    <div id="imageModal" class="modal">
-      <i id="close" class="fa-solid fa-xmark"></i>
-      <img class="modal-content" id="img01" />
+    <div class="plants-section">
+      <div class="mainPlant-container">
+        <img class="main-image" src="Plants/plantMainTemporary.png" />
+      </div>
+      <div class="random"></div>
+      <div id="imageModal" class="modal">
+        <i id="close" class="fa-solid fa-xmark"></i>
+        <img class="modal-content" id="img01" />
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="hobbies.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="reusable.js"></script>
   </body>
 </html>
