Improved the projects page

--- a/hobbies.html
+++ b/hobbies.html
@@ -99,7 +99,9 @@
       <div class="random"></div>
       <div id="imageModal" class="modal">
         <i id="close" class="fa-solid fa-xmark"></i>
-        <img class="modal-content" id="img01" />
+        <!-- <div class="modal-content"> -->
+        <!-- <img class="modal-content" id="img01" /> -->
+        <!-- </div> -->
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
