--- a/projects.html
+++ b/projects.html
@@ -5,75 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
     <link rel="stylesheet" href="projects.css" />
+    <link rel="icon" href="Logo.svg" type="image/svg+xml" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" />
   </head>
   <body>
-    <div class="wrapper wrapper1">
-      <div class="tape-unit item1">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
+    <div class="card-wrapper">
+      <div class="wrapper wrapper1">
+        <div class="tape-unit item1">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item2">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item3">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item4">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
       </div>
-      <div class="tape-unit item2">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
+      <div class="wrapper wrapper2">
+        <div class="tape-unit item1">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item2">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item3">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
+        <div class="tape-unit item4">
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="slash"></div>
+          <div class="text">Do Not Enter</div>
+        </div>
       </div>
-      <div class="tape-unit item3">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
-      </div>
-      <div class="tape-unit item4">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
+      <div class="card">
+        <p>This page is under construction. There is nothing to see here.</p>
       </div>
     </div>
-    <div class="wrapper wrapper2">
-      <div class="tape-unit item1">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
-      </div>
-      <div class="tape-unit item2">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
-      </div>
-      <div class="tape-unit item3">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
-      </div>
-      <div class="tape-unit item4">
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="slash"></div>
-        <div class="text">Do Not Enter</div>
-      </div>
-    </div>
+    <div class="blank"></div>
   </body>
 </html>
