added some stuff

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,11 @@
         </div>
       </div>
       <div class="card">
-        <p>This page is under construction. Nothing to see here.</p>
+        <div class="extra-container"></div>
+        <p>
+          <span class="first">This page is under construction.</span>
+          <span class="second">Nothing to see here.</span>
+        </p>
         <h3>
           Now get out of here!
           <a href="index.html">
@@ -129,7 +133,43 @@
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
-    <div class="blank"></div>
+    <div class="scroller 1">
+      <div class="scrolling-text big">Wanna</div>
+      <div class="scrolling-text small">Wanna</div>
+    </div>
+
+    <div class="scroller 2">
+      <div class="scrolling-text big">See</div>
+      <div class="scrolling-text small">See</div>
+    </div>
+    <div class="scroller 3">
+      <div class="scrolling-text big">More?</div>
+      <div class="scrolling-text small">More?</div>
+    </div>
+    <div class="links-section">
+      <div class="text">Check out my stuff</div>
+      <div class="link">
+        <a href="github.com">Github</a>
+      </div>
+      <hr class="styled-hr" />
+      <div class="link">
+        <a href="instagram.com/farzatci.com">Instagram</a>
+      </div>
+      <hr class="styled-hr" />
+      <div class="link">
+        <a href="linkedin.com">LinkedIn</a>
+      </div>
+      <hr class="styled-hr" />
+    </div>
+    <div class="gif">
+      <img
+        src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdW52MTA5eHZkNmRwZzR6anhudHppaWdjY3ZtaTYzejNhNjJ6eDdpcSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/aQwvKKi4Lv3t63nZl9/giphy.webp" />
+    </div>
     <script src="projects.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
   </body>
 </html>
