added some stuff for projects

--- a/projects.html
+++ b/projects.html
@@ -133,16 +133,16 @@
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
-    <div class="scroller 1">
+    <div class="scroller s1">
       <div class="scrolling-text big">Wanna</div>
       <div class="scrolling-text small">Wanna</div>
     </div>
 
-    <div class="scroller 2">
+    <div class="scroller s2">
       <div class="scrolling-text big">See</div>
       <div class="scrolling-text small">See</div>
     </div>
-    <div class="scroller 3">
+    <div class="scroller s3">
       <div class="scrolling-text big">More?</div>
       <div class="scrolling-text small">More?</div>
     </div>
@@ -165,11 +165,16 @@
       <img
         src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdW52MTA5eHZkNmRwZzR6anhudHppaWdjY3ZtaTYzejNhNjJ6eDdpcSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/aQwvKKi4Lv3t63nZl9/giphy.webp" />
     </div>
-    <script src="projects.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+
+    <script src="projects.js"></script>
   </body>
 </html>
