Finished Projects Page! lessgo

--- a/projects.html
+++ b/projects.html
@@ -148,15 +148,16 @@
     </div>
     <div class="links-section">
       <div class="text">Check out my stuff</div>
-      <div class="link">
-        <a href="github.com">Github</a>
-      </div>
+<div class="link github" data-text="Github">
+  <a href="https://github.com">Github</a>
+</div>
+
       <hr class="styled-hr" />
-      <div class="link">
+      <div class="link instagram">
         <a href="instagram.com/farzatci.com">Instagram</a>
       </div>
       <hr class="styled-hr" />
-      <div class="link">
+      <div class="link linked">
         <a href="linkedin.com">LinkedIn</a>
       </div>
       <hr class="styled-hr" />
