Added a bunch of stuff

--- a/hobbies.html
+++ b/hobbies.html
@@ -55,6 +55,27 @@
     <div class="tag">
       <a href="#" onclick="scrollToTop(event)">Farzatci</a>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="hobby-section origami-section">
       <div class="mainImage-container">
         <img class="main-image" src="Origami/OrigamiMainTest.jpg" />
@@ -92,7 +113,7 @@
         </button>
       </div>
     </div>
-    <div class="plants-section">
+    <div class="hobby-section plants-section">
       <div class="mainPlant-container">
         <img class="main-image" src="Plants/plantMainTemporary.png" />
       </div>
@@ -104,6 +125,28 @@
         <!-- </div> -->
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="hobbies.js"></script>
